--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "combc/Yii2Boilerplate",
+    "name": "combc/yii2boilerplate",
     "description": "Structure for enterprise-grade websites for Yii2 framework.",
     "keywords": ["yii2", "framework", "boilerplate", "vagrant"],
     "homepage": "http://www.combc.com/",
